--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
-ul {
-    list-style: none;
-}
+/* color text  */
+/* color web #4D5AE5 */ 
+/* color navigation, logo  #2E2F42 */
+/* color active navigation #404BBF */
+/* color text hero, batton #FFFFFF */
+/* color title h2, h3 #2E2F42 */
+/* color text site, address #434455 */
+/* color hover address #404BBF */
+/* logo futer #F4F4FD */
+ /* text futer #E7E9FC */
+
+ /* color text portfolio */
+ /* text ul button #4D5AE5 */
+  /* text hover button #FFFFFF */
+  /* background-color button #4D5AE5 */
+  /* background-color button hiver #404BBF */
+  
